--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 #
 #  * .env                contains default values for the environment variables needed by the app
 #  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
+#  * .env.$       committed environment-specific defaults
 #  * .env.$APP_ENV.local uncommitted environment-specific overrides
 #
 # Real environment variables win over .env files.
@@ -16,6 +16,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=67ed13ace0e6358bf437cb35af56387f
+KERNEL_CLASS='App\Kernel'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -28,5 +29,5 @@ APP_SECRET=67ed13ace0e6358bf437cb35af56387f
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres/$POSTGRES_DB?serverVersion=11&charset=utf8"
 ###< doctrine/doctrine-bundle ###
